dev/prospectio/prospectio-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prospectio-front
  namespace: prospectio
  labels:
    app: prospectio-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prospectio-front
  template:
    metadata:
      labels:
        app: prospectio-front
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      containers:
        - name: prospectio-front
          image: kaiohz/prospectio-front:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
              cpu: "100m"
      volumes:
        - name: config-volume
          configMap:
            name: prospectio-front-config
